# ocr

./: .coveragerc  .gitignore  README.md  config.yaml  environment.yml  pyproject.toml  setup_db.sql  setup_sqlite_db.sql  sonar-project.properties
assets/: demo.tiff
demo_output/: demo.json  demo.txt
pipeline/: config.py  db.py  discovery.py  manager.py  ocr_engine.py  preprocessor.py  worker.py
scripts/: discover.py  process.py  status.py
tests/: conftest.py  test_config.py  test_db.py  test_discovery.py  test_e2e.py  test_extras.py  test_manager.py  test_ocr_engine.py  test_preprocessor.py  test_scripts.py  test_worker.py
tools/: generate_demo_tiff.py  run_demo_local.py
