# =============================================================================
# pyproject.toml — OCR Pipeline
#
# Works with both UV and conda:
#
#   UV  (local dev, CI)
#       uv sync                  # install all runtime + dev deps
#       uv sync --no-dev         # runtime only
#       uv run python scripts/discover.py
#
#   conda  (preferred when Tesseract / ODBC driver must be conda-managed)
#       conda env create -f environment.yml
#       conda activate ocr-pipeline
#
# System-level dependencies NOT managed by pip/uv — install separately:
#   Tesseract binary
#     Ubuntu/Debian : sudo apt install tesseract-ocr tesseract-ocr-eng
#     macOS         : brew install tesseract
#     Windows       : https://github.com/UB-Mannheim/tesseract/wiki
#   ODBC Driver for SQL Server
#     https://learn.microsoft.com/sql/connect/odbc/linux-mac/installing-the-microsoft-odbc-driver-for-sql-server
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "scripts"]

# -----------------------------------------------------------------------------
# Project metadata
# -----------------------------------------------------------------------------

[project]
name = "ocr-pipeline"
version = "0.1.0"
description = "Batch OCR pipeline for scanned TIFF documents"
requires-python = ">=3.11"

dependencies = [
    # OCR engine Python bindings (Tesseract binary installed separately)
    "pytesseract>=0.3",
    # PaddleOCR (CPU) — alternative OCR engine; installed via `uv sync`
    "paddleocr>=2.0; python_version < '3.14'",
    # PaddlePaddle runtime (CPU). For GPU installs, install the GPU wheel manually.
    "paddlepaddle>=2.5; python_version < '3.14'",

    # Image handling and preprocessing
    "pillow>=10.0",
    # opencv-python-headless omits GUI modules (imshow etc.) — sufficient for
    # server/pipeline use. Swap for opencv-python if you need display functions.
    "opencv-python-headless>=4.8",
    "numpy>=1.26",
    "scikit-image>=0.22",      # Sauvola binarisation for historical documents

    # EasyOCR — lightweight OCR alternative; install when Python ABI supported
    "easyocr>=1.6; python_version < '3.14'",

    # Database
    "sqlalchemy>=2.0",
    "pyodbc>=4.0",             # MSSQL ODBC driver wrapper (driver installed separately)

    # Configuration and CLI
    "pyyaml>=6.0",
    "click>=8.1",

    # Searchable PDF output
    "pypdf>=4.0",              # merge per-page PDFs produced by Tesseract

    # Monitoring and logging
    "tqdm>=4.66",
    "loguru>=0.7",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "mypy>=1.6,<2.0",
]

# -----------------------------------------------------------------------------
# CLI entry points
# -----------------------------------------------------------------------------

[project.scripts]
ocr-discover = "scripts.discover:main"
ocr-process  = "scripts.process:main"
ocr-status   = "scripts.status:main"

# -----------------------------------------------------------------------------
# UV configuration
# -----------------------------------------------------------------------------

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.15.0,<0.16",
    "mypy>=1.6,<2.0",
    "types-PyYAML>=6.0",
]

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-ra --cov=pipeline --cov=scripts --cov-branch --cov-report=term-missing --cov-fail-under=100"

# -----------------------------------------------------------------------------
# Coverage
# -----------------------------------------------------------------------------

[tool.coverage.run]
source  = ["pipeline", "scripts"]
branch  = true
omit    = ["tests/*"]

[tool.coverage.report]
show_missing   = true
skip_covered   = false
exclude_lines  = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

# Ruff configuration (formatting + linting)
[tool.ruff]
line-length = 88
exclude = [".venv", "venv", "dist", "build", "__pycache__"]

# mypy static type checking
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
show_error_codes = true
files = ["pipeline", "scripts"]
follow_imports = "skip"
exclude = "(.venv|venv|site-packages|dist|build)"
